# TnPCalibration

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  TODO
D3PDReaderAdapter/: Makefile
GrapherTools/: CMakeLists.txt  GrapherTools.sublime-project  GrapherTools.sublime-workspace
GrapherTools/GrapherTools/: ScaleFactor.h  ScaleFactorAttributes.h  ScaleFactorComponent.h
GrapherTools/Root/: ScaleFactor.cxx
GrapherTools/cmt/: Makefile.RootCore
GrapherTools/src/: LinkDef.h  ScaleFactor.cxx  ScaleFactorAttributes.cxx  ScaleFactorComponent.cxx
GrapherTools/test/: ut_ScaleFactor.cxx  ut_ScaleFactorAttributes.cxx  ut_ScaleFactorAttributes.h
JacobUtils/: CMakeLists.txt  JacobUtils.sublime-project  JacobUtils.sublime-workspace
JacobUtils/JacobUtils/: LoggingUtility.h  LoggingUtilityMacros.h  MathTools.h  ReaderTools.h  SampleList.h  StringUtils.h  Uncopyable.h  VectorUtils.h
JacobUtils/Root/: LinkDef.h  MathTools.cxx  ReaderTools.cxx  SampleList.cxx
JacobUtils/cmt/: Makefile.RootCore  Makefile.RootCore~
JacobUtils/src/: LinkDef.h  LoggingUtility.cxx  SampleList.cxx
JacobUtils/test/: ut_LoggingUtility.cxx  ut_ReaderTools.cxx  ut_SampleList.cxx
MuonEfficiency/: CMakeLists.txt  MuonEfficiency.sublime-project  MuonEfficiency.sublime-workspace  TODO
MuonEfficiency/MuonEfficiency/: EfficiencyMaker.h  EventWeighting.h  FitResults.h  HistogramCollector.h  HistogramFactory.h  PileupPRW.h  PileupReWeighting.h  SampleHistograms.h  ScaleFactorMaker.h  ScaleFactorPlotter.h  SingleGausFit.h  SliceHisto.h  SummaryPlotMaker.h  TnPSlices.h  Weighting.h
MuonEfficiency/Root/: EfficiencyMaker.cxx  EventWeighting.cxx  HistogramCollector.cxx  HistogramFactory.cxx  LinkDef.h  PileupPRW.cxx  PileupReWeighting.cxx  SampleHistograms.cxx  SummaryPlotMaker.cxx  TnPSlices.cxx
MuonEfficiency/cmt/: Makefile.RootCore  Makefile.RootCore~
MuonEfficiency/share/: eta.txt  etcone40.txt  jetDr.txt  phi.txt  pt.txt  ptcone40.txt
MuonEfficiency/src/: EventWeighting.cxx  FitResults.cxx  HistogramCollector.cxx  HistogramFactory.cxx  PileupPRW.cxx  ScaleFactorPlotter.cxx  SingleGausFit.cxx  SliceHisto.cxx  SummaryPlotMaker.cxx
MuonEfficiency/test/: ut_HistogramCollector.cxx  ut_HistogramCollector.h  ut_ScaleFactorPlotter.cxx  ut_SingleGausFit.cxx
MuonEfficiency/test-bin/: ut_HistogramCollector  ut_SingleGausFit
RootAdapters/: CMakeLists.txt  Makefile  SmartFunction.cxx
RootAdapters/RootAdapters/: SmartFunction.h
RootAdapters/src/: SmartFunction.cxx
RunPileupPRW/: RunPileupPRWSubmit.cxx
SMTMiniNtuple/: Makefile  SMTMiniNtuple.sublime-project  (+1 more)
TnPFitter/: CMakeLists.txt  Makefile  fitter.sublime-project  fitter.sublime-workspace  tnpfitter.sublime-project  tnpfitter.sublime-workspace
TnPFitter/Root/: DoubleGausFit.cxx  DoubleGausLandauFit.cxx  FitConfig.cxx  FitConfigurationHelpers.cxx  FitDrawingHelpers.cxx  FitEfficiency.cxx  FitIntegral.cxx  FitInterface.cxx  FitResult.cxx  FitScaleFactor.cxx  FitSetup.cxx  FitterDraw.cxx  IFitter.cxx  LinkDef.h  SingleGausFit.cxx
TnPFitter/TnPFitter/: BackgroundFittedFunction.h  CompositeFunction.h  DoubleGausFit.h  DoubleGausLandauFit.h  FitConfig.h  FitConfigurationHelpers.h  FitDrawingHelpers.h  FitEfficiency.h  FitIntegral.h  FitInterface.h  FitResult.h  FitScaleFactor.h  FitSetup.h  FittableFunction.h  FittableGroup.h  FitterDraw.h  HybridGausFit.h  IFitter.h  SignalFittedFunction.h  SingleGausFit.h
TnPFitter/cmt/: Makefile.RootCore
TnPFitter/data/: TnPFitter-FittingConfig.xml
TnPFitter/src/: BackgroundFittedFunction.cxx  CompositeFunction.cxx  DoubleGausFit.cxx  FitConfig.cxx  FitEfficiency.cxx  FitIntegral.cxx  FitResult.cxx  FitScaleFactor.cxx  FittableFunction.cxx  FittableGroup.cxx  FitterDraw.cxx  IFitter.cxx  SignalFittedFunction.cxx  SingleGausFit.cxx
TnPFitter/test/: TestCompositeFunction.cpp  TestCompositeFunction.h  ut_DoubleGausFit.cxx  ut_FitConfig.cxx  ut_FitConfig.h  ut_FitEfficiency.cxx  ut_FitScaleFactor.cxx  ut_FittableFunction.cpp  ut_FittableFunction.h  ut_FitterDraw.cxx  ut_HybridGausFit.cxx  ut_LandGaus.cxx  ut_SetupDoubleGaus.cxx  ut_SingleGausFit.cxx  ut_SingleGausFit.h
TnPSelector/: CMakeLists.txt  Makefile  TnPSelector.sublime-project  TnPSelector.sublime-workspace  run_tests.sh  tnpselector.sublime-project  tnpselector.sublime-workspace
TnPSelector/Root/: KinematicUtils.cxx  PrintUtils.cxx  TJPsiClassifier.cxx  TJPsiMCPSelector.cxx  TJPsiMuonProbeSelector.cxx  TJPsiPairSelector.cxx  TJPsiProbeSelector.cxx  TJPsiSMTSelector.cxx  TJPsiTagSelector.cxx  TJetSelector.cxx  TTriggerMatching.cxx
TnPSelector/TnPSelector/: CutflowCollector.h  KinematicUtils.h  PrintUtils.h  TJPsiClassifier.h  TJPsiMuonProbeSelector.h  TJPsiPairSelector.h  TJPsiProbeSelector.h  TJPsiSMTSelector.h  TJPsiTagSelector.h  TJetSelector.h  TMCPSelector.h  TTriggerMatching.h
TnPSelector/cmt/: ._Makefile.RootCore  Makefile.RootCore
TnPSelector/src/: KinematicUtils.cxx  LinkDef.h  PrintUtils.cxx  TJPsiClassifier.cxx  TJPsiMCPSelector.cxx  TJPsiMuonProbeSelector.cxx  TJPsiPairSelector.cxx  TJPsiProbeSelector.cxx  TJPsiSMTSelector.cxx  TJPsiTagSelector.cxx
TnPSelector/test/: FakeMuon.h  FakeMuons.h  FakeTrack.h  FakeTracks.h  ut_Classifier.cxx  ut_Classifier.h  ut_KinematicUtils.cxx  ut_KinematicUtils.h  ut_MuonProbeSelector.cxx  ut_MuonProbeSelector.h  ut_PairSelector.cxx  ut_PairSelector.h  ut_ProbeSelector.cxx  ut_ProbeSelector.h  ut_SMTSelector.cxx  ut_SMTSelector.h  ut_TJPsiProbeSelector.cxx  ut_TagSelector.cxx  ut_TagSelector.h  ut_TnPClassifier.h
TruthNavigationTools/: CMakeLists.txt  Makefile  truth.sublime-project  truth.sublime-workspace
TruthNavigationTools/Root/: ChainNavigationTools.cxx  TruthMuonMatching.cxx  TruthTools.cxx
TruthNavigationTools/TruthNavigationTools/: ChainNavigationTools.h  TruthEnums.h  TruthMuonMatching.h  TruthTools.h
TruthNavigationTools/cmt/: Makefile.RootCore
TruthNavigationTools/src/: ChainNavigationTools.cxx  TruthMuonMatching.cxx  TruthTools.cxx
TruthNavigationTools/test/: ut_TruthTools.h  ut_truthtools.cxx
TruthNavigationTools/test-bin/: ut_truthtools
run/pairing/data/: test
(+97 files in other folders)
